--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -168,7 +168,7 @@
                                     <div class="add-tast-form-input-required-container">
                                         <input id="add_task_due_date" class="w-100 add-task-form-default-inputs"
                                             type="text" placeholder="dd/mm/yyyy"
-                                            onfocus="this.type='date'; this.showPicker?.()"
+                                            onclick="this.type='date'; this.showPicker?.()"
                                             onblur="if(!this.value) this.type='text'">
                                         <div class="h-16">
                                             <p class="add-tast-form-required-msg">This field is required</p>
@@ -281,24 +281,25 @@
                                                 </div>
                                                 <p>Anton Mayer</p>
                                             </div>
-                                            <svg id="test_contact_unchecked" class="d_none"
-                                                xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                viewBox="0 0 24 24" fill="none">
-                                                <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647"
-                                                    stroke-width="2" />
-                                            </svg>
-                                            <div  class="">
-                                                <svg id="test_contact_checked" class="d_none" xmlns="http://www.w3.org/2000/svg"
-                                                width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                                <path
-                                                    d="M20 11V17C20 18.6569 18.6569 20 17 20H7C5.34315 20 4 18.6569 4 17V7C4 5.34315 5.34315 4 7 4H15"
-                                                    stroke="white" stroke-width="2" stroke-linecap="round" />
-                                                <path d="M8 12L12 16L20 4.5" stroke="white" stroke-width="2"
-                                                    stroke-linecap="round" stroke-linejoin="round" />
-                                            </svg>
+                                            <div id="test_contact_unchecked" class="">
+                                                <svg id="test_contact_unchecked" class=""
+                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none">
+                                                    <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647"
+                                                        stroke-width="2" />
+                                                </svg>
                                             </div>
-                                            
-
+                                            <div id="test_contact_checked" class="d_none">
+                                                <svg id="test_contact_checked" class=""
+                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none">
+                                                    <path
+                                                        d="M20 11V17C20 18.6569 18.6569 20 17 20H7C5.34315 20 4 18.6569 4 17V7C4 5.34315 5.34315 4 7 4H15"
+                                                        stroke="white" stroke-width="2" stroke-linecap="round" />
+                                                    <path d="M8 12L12 16L20 4.5" stroke="white" stroke-width="2"
+                                                        stroke-linecap="round" stroke-linejoin="round" />
+                                                </svg>
+                                            </div>
                                         </li>
                                     </ul>
                                 </div>
