--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -255,7 +255,7 @@
                                 <label for="add_task_assigned_to" class="add-task-assigned-to-category-label">
                                     <p>Assigned to</p>
                                     <input id="add_task_assigned_to" class="w-100 add-task-form-default-inputs"
-                                        type="text">
+                                        type="text" onclick="renderContactsInList()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none">
                                         <mask id="mask0_387837_1520" style="mask-type:alpha" maskUnits="userSpaceOnUse"
@@ -272,35 +272,6 @@
                                 <div class="add-task-form-assigned-to-dropdown">
                                     <ul id="add_task_form_assigned_to_dropdown_contacts"
                                         class="add-task-form-assigned-to-dropdown-contacts">
-                                        <li id="test_contact"
-                                            class="add-task-form-assigned-to-dropdown-contacts-default-hover-class"
-                                            onclick="selectContact('test_contact')">
-                                            <div class="add-task-form-assigned-to-dropdown-list-contact">
-                                                <div class="add-task-form-assigned-to-dropdown-contacts-icon">
-                                                    <p>AM</p>
-                                                </div>
-                                                <p>Anton Mayer</p>
-                                            </div>
-                                            <div id="test_contact_unchecked" class="">
-                                                <svg id="test_contact_unchecked" class=""
-                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                    viewBox="0 0 24 24" fill="none">
-                                                    <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647"
-                                                        stroke-width="2" />
-                                                </svg>
-                                            </div>
-                                            <div id="test_contact_checked" class="d_none">
-                                                <svg id="test_contact_checked" class=""
-                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                    viewBox="0 0 24 24" fill="none">
-                                                    <path
-                                                        d="M20 11V17C20 18.6569 18.6569 20 17 20H7C5.34315 20 4 18.6569 4 17V7C4 5.34315 5.34315 4 7 4H15"
-                                                        stroke="white" stroke-width="2" stroke-linecap="round" />
-                                                    <path d="M8 12L12 16L20 4.5" stroke="white" stroke-width="2"
-                                                        stroke-linecap="round" stroke-linejoin="round" />
-                                                </svg>
-                                            </div>
-                                        </li>
                                     </ul>
                                 </div>
                             </div>
